--- a/pom.xml
+++ b/pom.xml
@@ -4,21 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>fr.cdy</groupId>
-  <artifactId>pdf</artifactId>
+  <groupId>com.github.cdeleray</groupId>
+  <artifactId>pdfmerger</artifactId>
   <version>1.0</version>
 
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
-<!--    <dependency>-->
-<!--      <groupId>com.lowagie</groupId>-->
-<!--      <artifactId>itext</artifactId>-->
-<!--      <version>2.1.7</version>-->
-<!--    </dependency>-->
     <dependency>
       <groupId>com.github.librepdf</groupId>
       <artifactId>openpdf</artifactId>
